# wildfire-meteo

./: README.md  pyproject.toml  requirements.txt
api/: main.py  open_meteo.py  skewT.py  soundings.py  thermo.py
web/: index.html  location.js  parcel.js  skewt.js  style.css  thermo.js
