[project]
name = "wildfire-meteo"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "numpy",
    "pandas",
    "xarray",
    "requests",
    "openmeteo-requests",
    "requests-cache",
    "retry-requests",
    "uv",
]

[tool.setuptools.packages.find]
include = ["api*"]

[tool.fastapi]
entrypoint = "api.main:app"
